Updating download link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a href="https://github.com/RamyAlReedy/jQuery-imageHandler" class="github">GitHub</a>
             </li>
             <li class="top-menu-item">
-                <a href="#" class="download">Download v1.0</a>
+                <a href="https://github.com/RamyAlReedy/jQuery-imageHandler/archive/gh-pages.zip" class="download">Download v1.0</a>
             </li>
         </ul>
     </div>
