--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Ramy Al Reedy">
     <meta name="description" content="A lightweight plugin that handles your images with a handful of features">
     <meta name="keywords" content="html,css,javascript,jquery,image,images,handler,handling,imagehandler">
+    <meta property="og:image" content="http://ramyalreedy.github.io/jQuery-imageHandler/images/meta.jpg"/>
 
     <link rel="stylesheet" href="css/styles.css" />
 
