--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <title>jQuery imageHandler</title>
 
+    <meta property="og:image" content="http://ramyalreedy.github.io/jQuery-imageHandler/images/meta.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="author" content="Ramy Al Reedy">
     <meta name="description" content="A lightweight plugin that handles your images with a handful of features">
     <meta name="keywords" content="html,css,javascript,jquery,image,images,handler,handling,imagehandler">
-    <meta property="og:image" content="http://ramyalreedy.github.io/jQuery-imageHandler/images/meta.jpg"/>
 
     <link rel="stylesheet" href="css/styles.css" />
 
