--- a/ajax.html
+++ b/ajax.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Ramy Al Reedy">
     <meta name="description" content="A lightweight plugin that handles your images with a handful of features">
     <meta name="keywords" content="html,css,javascript,jquery,image,images,handler,handling,imagehandler">
+    <meta property="og:image" content="http://ramyalreedy.github.io/jQuery-imageHandler/images/metaimage.jpg">
 
     <!--PAGE STYLES (YOU WON'T NEED THIS)-->
     <link rel="stylesheet" href="css/page-styles.css" />
@@ -300,10 +301,6 @@
 
     <h3>
         Scroll to the bottom of the page and click the 'Load more...' button.
-    </h3>
-
-    <h3>
-        <i>Please note that some browsers won't allow ajax requests unless you're using a local webserver.</i>
     </h3>
 
     <ul class="grid-cols clearfix">
