--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </p>
     <p>
         This plugin handles all this crap for you. All you have to do is decide how you want your images to be displayed and the rest will 
-        be taken care of. It will check if the browser used supports CSS3, and if it does, it will go with 'background-image' approach 
+        be taken care of. It will check if the browser used supports CSS3, and if it does, it will go with the 'background-image' approach 
         because it's just smoother, and if it doesn't, then it will fallback to the other approach by applying styles to the images and their 
         containers that result in the handling mode you chose. Additionally, window resize is detected to reHandle images if necessary.
     </p>
